tests/errors/syntax/020.ura
// errors/syntax/020 — unexpected token where an expression is expected

main():
    x int = *
    return 0